package be.isims.ihm.dp.tp5.ex1.code;

public interface Pizza {
    double calculePrix();
    void afficheDescription();
}
