@startuml

title __CODE's Class Diagram__\n

  namespace be.isims.ihm.dp.tp5.ex1.code {
    class be.isims.ihm.dp.tp5.ex1.code.Boulette {
        + Boulette()
    }
  }
  

  namespace be.isims.ihm.dp.tp5.ex1.code {
    class be.isims.ihm.dp.tp5.ex1.code.Champignons {
        + Champignons()
    }
  }
  

  namespace be.isims.ihm.dp.tp5.ex1.code {
    class be.isims.ihm.dp.tp5.ex1.code.Fromage {
        + Fromage()
    }
  }
  

  namespace be.isims.ihm.dp.tp5.ex1.code {
    class be.isims.ihm.dp.tp5.ex1.code.Jambon {
        + Jambon()
    }
  }
  

  namespace be.isims.ihm.dp.tp5.ex1.code {
    class be.isims.ihm.dp.tp5.ex1.code.Main {
        {static} + main()
    }
  }
  

  namespace be.isims.ihm.dp.tp5.ex1.code {
    class be.isims.ihm.dp.tp5.ex1.code.Oignons {
        + Oignons()
    }
  }
  

  namespace be.isims.ihm.dp.tp5.ex1.code {
    class be.isims.ihm.dp.tp5.ex1.code.Olive {
        + Olive()
    }
  }
  

  namespace be.isims.ihm.dp.tp5.ex1.code {
    interface be.isims.ihm.dp.tp5.ex1.code.Pizza {
        {abstract} + afficheDescription()
        {abstract} + calculePrix()
    }
  }
  

  namespace be.isims.ihm.dp.tp5.ex1.code {
    class be.isims.ihm.dp.tp5.ex1.code.PizzaClassique {
        - prix : double
        + afficheDescription()
        + calculePrix()
    }
  }
  

  namespace be.isims.ihm.dp.tp5.ex1.code {
    class be.isims.ihm.dp.tp5.ex1.code.PizzaDecorator {
        # prix : double
        + PizzaDecorator()
        + afficheDescription()
        + calculePrix()
        + getPrix()
    }
  }
  

  namespace be.isims.ihm.dp.tp5.ex1.code {
    class be.isims.ihm.dp.tp5.ex1.code.PizzaFourree {
        - prix : double
        + afficheDescription()
        + calculePrix()
    }
  }
  

  namespace be.isims.ihm.dp.tp5.ex1.code {
    class be.isims.ihm.dp.tp5.ex1.code.PizzaPateFine {
        - prix : double
        + afficheDescription()
        + calculePrix()
    }
  }
  

  namespace be.isims.ihm.dp.tp5.ex1.code {
    class be.isims.ihm.dp.tp5.ex1.code.Thon {
        + Thon()
    }
  }
  

  be.isims.ihm.dp.tp5.ex1.code.Boulette -up-|> be.isims.ihm.dp.tp5.ex1.code.PizzaDecorator
  be.isims.ihm.dp.tp5.ex1.code.Champignons -up-|> be.isims.ihm.dp.tp5.ex1.code.PizzaDecorator
  be.isims.ihm.dp.tp5.ex1.code.Fromage -up-|> be.isims.ihm.dp.tp5.ex1.code.PizzaDecorator
  be.isims.ihm.dp.tp5.ex1.code.Jambon -up-|> be.isims.ihm.dp.tp5.ex1.code.PizzaDecorator
  be.isims.ihm.dp.tp5.ex1.code.Oignons -up-|> be.isims.ihm.dp.tp5.ex1.code.PizzaDecorator
  be.isims.ihm.dp.tp5.ex1.code.Olive -up-|> be.isims.ihm.dp.tp5.ex1.code.PizzaDecorator
  be.isims.ihm.dp.tp5.ex1.code.PizzaClassique .up.|> be.isims.ihm.dp.tp5.ex1.code.Pizza
  be.isims.ihm.dp.tp5.ex1.code.PizzaDecorator .up.|> be.isims.ihm.dp.tp5.ex1.code.Pizza
  be.isims.ihm.dp.tp5.ex1.code.PizzaDecorator o-- be.isims.ihm.dp.tp5.ex1.code.Pizza : pizzaADecorer
  be.isims.ihm.dp.tp5.ex1.code.PizzaFourree .up.|> be.isims.ihm.dp.tp5.ex1.code.Pizza
  be.isims.ihm.dp.tp5.ex1.code.PizzaPateFine .up.|> be.isims.ihm.dp.tp5.ex1.code.Pizza
  be.isims.ihm.dp.tp5.ex1.code.Thon -up-|> be.isims.ihm.dp.tp5.ex1.code.PizzaDecorator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
